--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,14 @@
-<h1>Meu Blog</h1>
-<app-post-list></app-post-list>
+<div class="main-content">
+  <router-outlet></router-outlet>
+  <app-navbar></app-navbar>
+  <app-post-list></app-post-list>
+
+</div>
+
+<footer class="blog-footer">
+  <div class="container">
+    <p>&copy; 2023 Nome do Seu Blog. Todos os direitos reservados.</p>
+    <p>Siga-nos nas redes sociais:</p>
+    <!-- Links de redes sociais -->
+  </div>
+</footer>
