--- a/src/app/post-list/post-list.component.css
+++ b/src/app/post-list/post-list.component.css
@@ -1,28 +1,42 @@
+.post-list-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
 .post-container {
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    padding: 10px;
-    margin-bottom: 20px;
-    background-color: #f8f8f8;
-    transition: background-color 0.3s ease-in-out;
-  }
-  
-  .post-container:hover {
-    background-color: #e8e8e8;
-  }
-  
-  .post-title {
-    font-size: 20px;
-    font-weight: bold;
-  }
-  
-  .post-content {
-    margin-top: 10px;
-  }
-  
-  .post-details {
-    margin-top: 10px;
-    font-style: italic;
-    font-size: 12px;
-  }
-  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  padding: 10px;
+  margin: 10px;
+  background-color: #f8f8f8;
+  transition: background-color 0.3s ease-in-out;
+}
+
+.post-container:hover {
+  background-color: #e8e8e8;
+}
+
+.post-image {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.post-image img {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
+  border-radius: 50%;
+}
+
+.post-title {
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+}
+
